# SAEAuto_ROS

./: CMakeLists.txt  README.md  package.xml
include/: AsyncSerial.h  CarNetwork.h  Control.h  Controller.h  HeartBeatSerialIn.h  IPC.h  Logger.h  LowLevelSerialOut.h  PID.h  SafetySerialOut.h  Timer.h  TripStateMonitor.h  TripStateObs.h
msg/: Command.msg
src/: .Xsens.cpp.swp  AsyncSerial.cpp  CarNetwork.cpp  Control.cpp  Controller.cpp  HeartBeatSerialIn.cpp  IPC.cpp  Logger.cpp  LowLevelSerialOut.cpp  PID.cpp  SafetySerialOut.cpp  Timer.cc  TripStateMonitor.cpp  wscript~
