<package>
  <name>rossae</name>
  <version>0.0.0</version>
  <description>
    <tt>RosSAE</tt>
  </description>
  <maintainer email="21435393@student.uwa.edu.au">Chao Zhang</maintainer>

  <license>GPLv2</license>

  <author>Thomas Drage</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <!--<test_depend>roscpp</test_depend>-->

  <export>

  </export>
</package>
